updated the code

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
               <img src="credit_3.png" class="credit3">
            </div>
             </div>
+            <h3 class="page">Explore More Advisors</h3>
           </div>
     </body>
 </html>
