--- a/index.html
+++ b/index.html
@@ -147,6 +147,14 @@
               <img src="credit_3.png" class="credit3">
            </div>
             </div>
+            <div class="page4_end">
+              <h4>Explore more Advisors</h4>
+              <img src="arrow.png">
+            </div>
+          </div>
+          <div class="page5">
+            <img src="page5_img.png" class="page5_img">
+            <h3 class="page5_heading">Get connected with advisor in just 3 Easy steps</h3>
           </div>
     </body>
 </html>
