--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               <img src="arrow.png">
             </div>
           </div>
-          <div class="page5">
+          <div class="page5_top">
             <img src="page5_img.png" class="page5_img">
             <h3 class="page5_heading">Get connected with advisor in just 3 Easy steps</h3>
           </div>
